# sicspy

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg
src/sicspy/: __init__.py  sicspym.py
src/sicspy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sicspy/sicspyem/: __init__.py  sicspyem.pyd
tests/: test_adjacency_degreesortedlistmat_bidirectional_tag_DEG.py  test_adjacency_degreesortedlistmat_bidirectional_tag_GCF.py  test_adjacency_degreesortedlistmat_bidirectional_tag_RDEG.py  test_adjacency_degreesortedlistmat_undirected_tag_DEG.py  test_adjacency_degreesortedlistmat_undirected_tag_GCF.py  test_adjacency_degreesortedlistmat_undirected_tag_RDEG.py  test_adjacency_list_bidirectional_tag_DEG.py  test_adjacency_list_bidirectional_tag_GCF.py  test_adjacency_list_bidirectional_tag_RDEG.py  test_adjacency_list_undirected_tag_DEG.py  test_adjacency_list_undirected_tag_GCF.py  test_adjacency_list_undirected_tag_RDEG.py  test_adjacency_listmat_bidirectional_tag_DEG.py  test_adjacency_listmat_bidirectional_tag_GCF.py  test_adjacency_listmat_bidirectional_tag_RDEG.py  test_adjacency_listmat_undirected_tag_DEG.py  test_adjacency_listmat_undirected_tag_GCF.py  test_adjacency_listmat_undirected_tag_RDEG.py  test_simple_graph.py
