[metadata]
name = sicspy
version = 0.0.1
author = Bojan Ilic
author_email = bi4528@student.uni-lj.si
description = Python package with SICS C++ extension (PyBind11)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bi4528/sicspy
project_urls =
    Bug Tracker = https://github.com/bi4528/sicspy/issues
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: Microsoft :: Windows :: Windows 10

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = ==3.9
zip_safe = no

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0

[options.package_data]
sicspy = py.typed